--- a/templete/index.html
+++ b/templete/index.html
@@ -11,14 +11,9 @@
         <!-- Favicon and title -->
         <link rel="icon" href="path/to/fav.png">
         <title>Templete</title>
-        <!-- Halfmoon CSS -->
+        <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
-        <!--nav styling-->
-        <style type="text/css">
-            .rud-nav-item-color{
-                color: white;
-            }
-        </style>
+        <link href="./style.css" rel="stylesheet" />
     </head>
     <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode" data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
         <!-- Modals go here -->
