more additions to index

--- a/landing-dev/index.html
+++ b/landing-dev/index.html
@@ -63,13 +63,101 @@
                     <img src="landing-bg-img.png" class="img-fluid" alt="image did a not exist sorry :/">
                 </div>
                 <div class="content">
-                    <h2 class="content-title text-center font-size-24">
-                        Hey.
+                    <h1 class="content-title text-center font-size-24">
+                        Hey
                     </h1>
-                    <hr>
                     <p class="text-center">
                         I'm a <span id="dev-fade-lang" class="font-weight-bolder">%lang%</span> developer who <span id="dev-fade-meta" class="font-weight-bolder">%meta%</span>.
                     </p>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Projects
+                    </h1>
+                    <p class="text-center">
+                        Looking for some of my projects? Here are my favorites.
+                    </p>
+                    <div class="container-lg">
+                        <div class="row">
+                            <div class="col-3">
+                                <div class="card p-0">
+                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="content-title">
+                                            I am a title.
+                                        </div>
+                                        <div class="text-muted">
+                                            I am a subtitle. I am the best subtitle of all subtitles. Look at me. I am so Epic. That is an Epic with a capital E because thats just how Epic my Epicness is.
+                                        </div>
+                                        <div class="rud-spacer-sm"></div>
+                                        <div class="text-right">
+                                            <a href="#" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card p-0">
+                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="content-title">
+                                            I am a title.
+                                        </div>
+                                        <div class="text-muted">
+                                            I am a subtitle. I am the best subtitle of all subtitles. Look at me. I am so Epic. That is an Epic with a capital E because thats just how Epic my Epicness is.
+                                        </div>
+                                        <div class="rud-spacer-sm"></div>
+                                        <div class="text-right">
+                                            <a href="#" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card p-0">
+                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="content-title">
+                                            I am a title.
+                                        </div>
+                                        <div class="text-muted">
+                                            I am a subtitle. I am the best subtitle of all subtitles. Look at me. I am so Epic. That is an Epic with a capital E because thats just how Epic my Epicness is.
+                                        </div>
+                                        <div class="rud-spacer-sm"></div>
+                                        <div class="text-right">
+                                            <a href="#" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <div class="card p-0">
+                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <div class="content">
+                                        <div class="content-title">
+                                            I am a title.
+                                        </div>
+                                        <div class="text-muted">
+                                            I am a subtitle. I am the best subtitle of all subtitles. Look at me. I am so Epic. That is an Epic with a capital E because thats just how Epic my Epicness is.
+                                        </div>
+                                        <div class="rud-spacer-sm"></div>
+                                        <div class="text-right">
+                                            <a href="#" class="btn btn-primary btn-rounded">Learn more</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Looking for something?
+                    </h1>
+                    <p class="text-center">
+                        Anything I've made or come across and decided is worth keeping I leave in the archives. If you need something related to me, its probably in here.
+                    </p>
+                    <div class="text-center">
+                        <a href="./archives/" class="btn btn-primary btn-rounded">Visit The Archives</a>
+                    </div>
                 </div>
             </div>
         </div>
