--- a/landing-dev/index.html
+++ b/landing-dev/index.html
@@ -34,7 +34,7 @@
                             <img class="rud-img-height-fluid" src="logo.png">
                         </div>
                     </a>
-                    <a href="./contact/">
+                    <a href="./archives/contact/">
                         <button class="btn btn-action btn-link" type="button">
                             <i class="fas fa-paper-plane rud-nav-item-color" aria-hidden="true"></i>
                         </button>
@@ -60,7 +60,7 @@
 
             <div class="content-wrapper">
                 <div class="container-fluid">
-                    <img src="landing-bg-img.png" class="img-fluid" alt="image did a not exist sorry :/">
+                    <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid" alt="image did a not exist sorry :/">
                 </div>
                 <div class="content">
                     <h1 class="content-title text-center font-size-24">
@@ -69,6 +69,10 @@
                     <p class="text-center">
                         I'm a <span id="dev-fade-lang" class="font-weight-bolder">%lang%</span> developer who <span id="dev-fade-meta" class="font-weight-bolder">%meta%</span>.
                     </p>
+                    <div class="text-center">
+                        <a href="./archives/about/" class="btn btn-primary btn-rounded">All The Info</a>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
                     <hr>
                     <h1 class="content-title text-center font-size-24">
                         Projects
@@ -78,7 +82,7 @@
                     </p>
                     <div class="container-lg">
                         <div class="row">
-                            <div class="col-3">
+                            <div class="col-sm">
                                 <div class="card p-0">
                                     <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
                                     <div class="content">
@@ -95,7 +99,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-sm">
                                 <div class="card p-0">
                                     <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
                                     <div class="content">
@@ -112,7 +116,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-sm">
                                 <div class="card p-0">
                                     <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
                                     <div class="content">
@@ -129,7 +133,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-3">
+                            <div class="col-sm">
                                 <div class="card p-0">
                                     <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
                                     <div class="content">
@@ -148,6 +152,13 @@
                             </div>
                         </div>
                     </div>
+                    <p class="text-center">
+                        Looking for another project? Find it here.
+                    </p>
+                    <div class="text-center">
+                        <a href="./archives/projects" class="btn btn-primary btn-rounded">All Projects</a>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
                     <hr>
                     <h1 class="content-title text-center font-size-24">
                         Looking for something?
@@ -157,6 +168,35 @@
                     </p>
                     <div class="text-center">
                         <a href="./archives/" class="btn btn-primary btn-rounded">Visit The Archives</a>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Contact
+                    </h1>
+                    <p class="text-center">
+                        If you need to get in touch, you can find everything you need to know here.
+                    </p>
+                    <div class="text-center">
+                        <a href="./archives/contact/" class="btn btn-primary btn-rounded">Contact Me</a>
+                    </div>
+                    <div class="rud-spacer-sm"></div>
+                    <hr>
+                    <h1 class="content-title text-center font-size-24">
+                        Accounts
+                    </h1>
+                    <p class="text-center">
+                        Looking for my GitHub, Steam, or social media accounts? Find them here.
+                    </p>
+                    <div class="text-center">
+                        <div class="btn-group" role="group" aria-label="Accounts">
+                            <a target="_blank" href="https://github.com/RudRecciah" class="btn btn-primary btn-rounded">GitHub</a>
+                            <a target="_blank" href="https://steamcommunity.com/id/rudrecciah/" class="btn btn-primary">Steam</a>
+                            <a target="_blank" href="https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q" class="btn btn-primary">Youtube</a>
+                            <a target="_blank" href="https://www.twitch.tv/rudrecciah" class="btn btn-primary">Twitch</a>
+                            <a target="_blank" href="https://twitter.com/RRecciah" class="btn btn-primary">Twitter</a>
+                            <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="btn btn-primary btn-rounded">Reddit</a>
+                        </div>
                     </div>
                 </div>
             </div>
