polising to card section of projects

--- a/landing-dev/index.html
+++ b/landing-dev/index.html
@@ -89,7 +89,7 @@
                                         <div class="content-title">
                                             I am a title.
                                         </div>
-                                        <div class="text-muted">
+                                        <div class="text-muted rud-card-sub-height">
                                             I am a subtitle. I am the best subtitle of all subtitles. Look at me. I am so Epic. That is an Epic with a capital E because thats just how Epic my Epicness is.
                                         </div>
                                         <div class="rud-spacer-sm"></div>
