added endcraft image to endcraft card

--- a/landing-dev/index.html
+++ b/landing-dev/index.html
@@ -120,7 +120,7 @@
                         <div class="row">
                             <div class="col-sm">
                                 <div class="card p-0">
-                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
+                                    <img src="endcraft.png" class="img-fluid rounded-top" alt="reload page pls">
                                     <div class="content">
                                         <div class="content-title">
                                             EndCraft
