finished index, can add more pages (motd not done)

--- a/landing-dev/index.html
+++ b/landing-dev/index.html
@@ -44,10 +44,10 @@
             <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
             <div class="sidebar">
                 <div class="sidebar-menu">
-                    <div class="sidebar-brand font-size-24">
+                    <div class="sidebar-brand ml-5 font-size-24">
                         <a href="./" class="sidebar-brand rud-text-logo">&lt;/RudRecciah&gt;</a>
                     </div>
-                    <div class="sidebar-content">
+                    <div class="sidebar-content ml-5">
                         <h1 class="sidebar-title">
                             Information
                         </h1>
@@ -55,6 +55,7 @@
                         <a href="./" class="sidebar-link active">Home</a>
                         <a href="./archives/about" class="sidebar-link">About</a>
                         <a href="./archives/contact" class="sidebar-link">Contact</a>
+                        <a href="./archives/" class="sidebar-link">Archives</a>
                         <details class="sidebar-link">
                             <summary class="rud-no-outline">
                               Accounts
@@ -81,12 +82,10 @@
                         <a href="#" class="sidebar-link">All</a>
                         <div class="rud-spacer-sm"></div>
                         <h1 class="sidebar-title">
-                            Archives
+                            Bugs
                         </h1>
                         <div class="sidebar-divider"></div>
-                        <a href="#" class="sidebar-link">Personal</a>
-                        <a href="#" class="sidebar-link">Third Party</a>
-                        <a href="#" class="sidebar-link">All</a>
+                        <a href="./archives/bugs" class="sidebar-link">Report A Bug</a>
                     </div>
                 </div>
                 <!--navigation here-->
@@ -234,6 +233,11 @@
                             <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-reddit"></i></a>
                         </div>
                     </div>
+                </div>
+                <div class="navbar navbar-static-bottom">
+                    <span class="navbar-text m-auto">
+                        Made by RudRecciah at 4:23 AM
+                    </span>
                 </div>
             </div>
         </div>
