created archive page templete

--- a/landing-dev/index.html
+++ b/landing-dev/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
         <link rel="icon" href="favicon.png">
-        <title>RudRecciah - Home</title>
+        <title>RudRecciah</title>
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
         <link href="./style.css" rel="stylesheet" />
