quick edit to templete

--- a/templete/index.html
+++ b/templete/index.html
@@ -31,10 +31,7 @@
             </nav>
             <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
             <div class="sidebar">
-                <a href="home link here">
-                    <!--logo here-->
-                </a>
-                <!--navigation here-->
+                <!-- Sidebar Navigation -->
             </div>
             <div class="content-wrapper">
 
