i forgot one of the bugs

--- a/freebirdsmp/script/index.html
+++ b/freebirdsmp/script/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Minecraft and things." />
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
-        <link rel="icon" href="./favi.png">
+        <link rel="icon" href="../favi.png">
         <title>Freebird SMP Script</title>
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
