some changes to the information panel

--- a/freebirdsmp/index.html
+++ b/freebirdsmp/index.html
@@ -35,11 +35,8 @@
                                     </h1>
                                     <!-- TODO: YOUTUBE CHANNEL LINK -->
                                     <p class="text-center">
-                                        A small, invite only Minecraft server built for <b><a href="https://discord.com/invite/MDxRZCx">this Discord server</a></b>. Looking to see what we do? Check out some of our <b><a href="#">videos</a></b>! We roleplay, host events, and enslave villagers for economical gain.
+                                        A small, invite only Minecraft server built for <b><a href="https://discord.com/invite/MDxRZCx">this Discord server</a></b>. Looking to see what we do? Check out some of our <b><a href="#">videos</a></b>! We roleplay, host events, and enslave villagers for economical gain. Want to join? We accept most active members of <b><a href="https://discord.com/invite/MDxRZCx">said Discord server</a></b>, as well as people recommended from other server members. Because of our involvment with roleplay aspects, you will have a canonical part. This doesn't mean you will have to actually be involved in the storyline; if you want to just play we have parts that don't have much involvment in the plot. Looking for more information? DM me on Discord<br><span class="text-monospace">@RudRecciah#5681 (id=246080207704817664)</span>
                                     </p>
-                                    <div class="text-center">
-                                        <a href="#smpinfo" class="btn btn-primary">Learn more</a>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -87,7 +84,6 @@
                                     </p>
                                 </div>
                             </div>
-                            <!-- TODO: Add info panel (instead of info page, info div with id #smpinfo) -->
                         </div>
                     </div>
                 </div>
