--- a/landing/about/index.html
+++ b/landing/about/index.html
@@ -10,7 +10,7 @@
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
         <link rel="icon" href="favicon.png">
-        <title>RudRecciah</title>
+        <title>RudRecciah - About</title>
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
         <link href="./style.css" rel="stylesheet" />
@@ -52,8 +52,8 @@
                             Information
                         </h1>
                         <div class="sidebar-divider"></div>
-                        <a href="./" class="sidebar-link active">Home</a>
-                        <a href="./about" class="sidebar-link">About</a>
+                        <a href="./" class="sidebar-link">Home</a>
+                        <a href="./about" class="sidebar-link active">About</a>
                         <a href="./contact" class="sidebar-link">Contact</a>
                         <details class="sidebar-link">
                             <summary class="rud-no-outline">
@@ -94,129 +94,8 @@
 
 
             <div class="content-wrapper">
-                <div class="container-fluid">
-                    <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid" alt="image did a not exist sorry :/">
-                </div>
                 <div class="content">
-                    <h1 class="content-title text-center font-size-24">
-                        Hey
-                    </h1>
-                    <p class="text-center">
-                        I'm a <span id="dev-fade-lang" class="font-weight-bolder">%lang%</span> developer who <span id="dev-fade-meta" class="font-weight-bolder">%meta%</span>.
-                    </p>
-                    <div class="text-center">
-                        <a href="./about/" class="btn btn-primary btn-rounded">All The Info</a>
-                    </div>
-                    <div class="rud-spacer-sm"></div>
-                    <hr>
-                    <h1 class="content-title text-center font-size-24">
-                        Projects
-                    </h1>
-                    <p class="text-center">
-                        Looking for some of my projects? Here are my favorites.
-                    </p>
-                    <div class="container-lg">
-                        <div class="row">
-                            <div class="col-sm">
-                                <div class="card p-0">
-                                    <img src="endcraft.png" class="img-fluid rounded-top" alt="reload page pls">
-                                    <div class="content">
-                                        <div class="rud-card-sub-height">
-                                            <div class="content-title">
-                                                EndCraft
-                                            </div>
-                                            <div class="text-muted">
-                                                EndCraft, my longest-running and longest-indev project, is a Minecraft server with fun minigames, survival, and PVP.
-                                            </div>
-                                            <div class="rud-spacer-sm"></div>
-                                        </div>
-                                        <div class="text-right">
-                                            <a href="./endcraft/" class="btn btn-primary btn-rounded">Learn more</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm">
-                                <div class="card p-0">
-                                    <img src="fbsmp-logo-wbg.png" class="img-fluid rounded-top" alt="reload page pls">
-                                    <div class="content">
-                                        <div class="rud-card-sub-height">
-                                            <div class="content-title">
-                                                Freebird SMP
-                                            </div>
-                                            <div class="text-muted">
-                                                Freebird SMP is a relatively small, invite-only Minecraft server built and maintained for <a href="https://discord.gg/MDxRZCx">this Discord server</a>.
-                                            </div>
-                                            <div class="rud-spacer-sm"></div>
-                                        </div>
-                                        <div class="text-right">
-                                            <a href="./freebirdsmp/" class="btn btn-primary btn-rounded">Learn more</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm">
-                                <div class="card p-0">
-                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
-                                    <div class="content">
-                                        <div class="rud-card-sub-height">
-                                            <div class="content-title">
-                                                TTM Theory Wiki
-                                            </div>
-                                            <div class="text-muted">
-                                                The TTM Theory Wiki is a collection of theories, lore, and headcanon about the <a href="https://store.steampowered.com/app/206440/To_the_Moon/?curator_clanid=2750327">To The Moon</a> series.
-                                            </div>
-                                            <div class="rud-spacer-sm"></div>
-                                        </div>
-                                        <div class="text-right">
-                                            <a href="./ttm/" class="btn btn-primary btn-rounded">Learn more</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="text-center">
-                        Looking for another project? Find it here.
-                    </p>
-                    <div class="text-center">
-                        <!-- TODO: PROJECTS HIGHLIGHTED ON SIDEBAR -->
-                        <button type="button" onclick="halfmoon.toggleSidebar()" class="btn btn-primary btn-rounded">All Projects</button>
-                    </div>
-                    <div class="rud-spacer-sm"></div>
-                    <hr>
-                    <h1 class="content-title text-center font-size-24">
-                        Contact
-                    </h1>
-                    <p class="text-center">
-                        If you need to get in touch, you can find everything you need to know here.
-                    </p>
-                    <div class="text-center">
-                        <a href="./contact/" class="btn btn-primary btn-rounded">Contact Me</a>
-                    </div>
-                    <div class="rud-spacer-sm"></div>
-                    <hr>
-                    <h1 class="content-title text-center font-size-24">
-                        Accounts
-                    </h1>
-                    <p class="text-center">
-                        Looking for my GitHub, Steam, or social media accounts? Find them here.
-                    </p>
-                    <div class="text-center">
-                        <div class="btn-group" role="group" aria-label="Accounts">
-                            <a target="_blank" href="https://github.com/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-github"></i></a>
-                            <a target="_blank" href="https://steamcommunity.com/id/rudrecciah/" class="btn btn-primary"><i class="fab fa-steam"></i></a>
-                            <a target="_blank" href="https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q" class="btn btn-primary"><i class="fab fa-youtube"></i></a>
-                            <a target="_blank" href="https://www.twitch.tv/rudrecciah" class="btn btn-primary"><i class="fab fa-twitch"></i></a>
-                            <a target="_blank" href="https://twitter.com/RRecciah" class="btn btn-primary"><i class="fab fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-reddit"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="navbar navbar-static-bottom">
-                    <span class="navbar-text m-auto">
-                        Made by RudRecciah at 4:23 AM
-                    </span>
+                    
                 </div>
             </div>
         </div>
