--- a/landing/bugs/index.html
+++ b/landing/bugs/index.html
@@ -10,222 +10,36 @@
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
         <link rel="icon" href="favicon.png">
-        <title>RudRecciah</title>
+        <title>RudRecciah - Report A Bug</title>
         <!-- CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
         <link href="./style.css" rel="stylesheet" />
     </head>
-    <body class="with-custom-webkit-scrollbars with-custom-css-scrollbars dark-mode rud-nomargin    " data-dm-shortcut-enabled="true" data-sidebar-shortcut-enabled="true">
-        <!-- Modals go here -->
-        <div class="page-wrapper with-navbar with-sidebar" data-sidebar-type="overlayed-all">
-            <div class="sticky-alerts">
-
-            </div>
-
-
-
-            <nav class="navbar">
-                <div class="navbar-content rud-width-fluid rud-height-fluid">
-                    <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
-                        <i class="fa fa-bars rud-nav-item-color" aria-hidden="true"></i>
-                    </button>
-                    <a href="./" class="rud-width-fluid btn btn-link"><span class="rud-nav-item-color rud-text-logo font-size-24">&lt;/RudRecciah&gt;</span>
-                    </a>
-                    <a href="./contact/">
-                        <button class="btn btn-action btn-link" type="button">
-                            <i class="fas fa-paper-plane rud-nav-item-color" aria-hidden="true"></i>
-                        </button>
-                    </a>
-                </div>
-            </nav>
-
-
-
-            <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
-            <div class="sidebar">
-                <div class="sidebar-menu">
-                    <div class="sidebar-brand ml-5 font-size-24">
-                        <a href="./" class="sidebar-brand rud-text-logo">&lt;/RudRecciah&gt;</a>
-                    </div>
-                    <div class="sidebar-content ml-5">
-                        <h1 class="sidebar-title">
-                            Information
-                        </h1>
-                        <div class="sidebar-divider"></div>
-                        <a href="./" class="sidebar-link active">Home</a>
-                        <a href="./about" class="sidebar-link">About</a>
-                        <a href="./contact" class="sidebar-link">Contact</a>
-                        <details class="sidebar-link">
-                            <summary class="rud-no-outline">
-                              Accounts
-                            </summary>
-                            <div class="sidebar-divider"></div>
-                            <div class="sidebar-content mt-0 mb-0 ml-0">
-                                <a target="_blank" href="https://github.com/RudRecciah" class="sidebar-link">GitHub</a>
-                                <a target="_blank" href="https://steamcommunity.com/id/rudrecciah/" class="sidebar-link">Steam</a>
-                                <a target="_blank" href="https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q" class="sidebar-link">Youtube</a>
-                                <a target="_blank" href="https://www.twitch.tv/rudrecciah" class="sidebar-link">Twitch</a>
-                                <a target="_blank" href="https://twitter.com/RRecciah" class="sidebar-link">Twitter</a>
-                                <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="sidebar-link">Reddit</a>
-                            </div>
-                        </details>
-                        <div class="rud-spacer-sm"></div>
-                        <h1 class="sidebar-title">
-                            Projects
-                        </h1>
-                        <div class="sidebar-divider"></div>
-                        <a href="./endcraft/" class="sidebar-link">EndCraft</a>
-                        <a href="./freebirdsmp/" class="sidebar-link">Freebird SMP</a>
-                        <a href="./ttm/" class="sidebar-link">TTM Theory Wiki</a>
-                        <!-- PROJECT SIDEBAR LINK 
-                        <a href="./ttm/" class="sidebar-link">TTM Theory Wiki</a>
-                        -->
-                        <div class="rud-spacer-sm"></div>
-                        <h1 class="sidebar-title">
-                            Bugs
-                        </h1>
-                        <div class="sidebar-divider"></div>
-                        <a href="./bugs" class="sidebar-link">Report A Bug</a>
-                    </div>
-                </div>
-                <!--navigation here-->
-            </div>
-
-
-
-            <div class="content-wrapper">
-                <div class="container-fluid">
-                    <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid" alt="image did a not exist sorry :/">
-                </div>
-                <div class="content">
-                    <h1 class="content-title text-center font-size-24">
-                        Hey
-                    </h1>
-                    <p class="text-center">
-                        I'm a <span id="dev-fade-lang" class="font-weight-bolder">%lang%</span> developer who <span id="dev-fade-meta" class="font-weight-bolder">%meta%</span>.
-                    </p>
-                    <div class="text-center">
-                        <a href="./about/" class="btn btn-primary btn-rounded">All The Info</a>
-                    </div>
-                    <div class="rud-spacer-sm"></div>
-                    <hr>
-                    <h1 class="content-title text-center font-size-24">
-                        Projects
-                    </h1>
-                    <p class="text-center">
-                        Looking for some of my projects? Here are my favorites.
-                    </p>
-                    <div class="container-lg">
-                        <div class="row">
-                            <div class="col-sm">
-                                <div class="card p-0">
-                                    <img src="endcraft.png" class="img-fluid rounded-top" alt="reload page pls">
-                                    <div class="content">
-                                        <div class="rud-card-sub-height">
-                                            <div class="content-title">
-                                                EndCraft
-                                            </div>
-                                            <div class="text-muted">
-                                                EndCraft, my longest-running and longest-indev project, is a Minecraft server with fun minigames, survival, and PVP.
-                                            </div>
-                                            <div class="rud-spacer-sm"></div>
-                                        </div>
-                                        <div class="text-right">
-                                            <a href="./endcraft/" class="btn btn-primary btn-rounded">Learn more</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm">
-                                <div class="card p-0">
-                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
-                                    <div class="content">
-                                        <div class="rud-card-sub-height">
-                                            <div class="content-title">
-                                                Freebird SMP
-                                            </div>
-                                            <div class="text-muted">
-                                                Freebird SMP is a relatively small, invite-only Minecraft server built and maintained for <a href="https://discord.gg/MDxRZCx">this Discord server</a>.
-                                            </div>
-                                            <div class="rud-spacer-sm"></div>
-                                        </div>
-                                        <div class="text-right">
-                                            <a href="./freebirdsmp/" class="btn btn-primary btn-rounded">Learn more</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-sm">
-                                <div class="card p-0">
-                                    <img src="bg-img.png" class="img-fluid rounded-top" alt="reload page pls">
-                                    <div class="content">
-                                        <div class="rud-card-sub-height">
-                                            <div class="content-title">
-                                                TTM Theory Wiki
-                                            </div>
-                                            <div class="text-muted">
-                                                The TTM Theory Wiki is a collection of theories, lore, and headcanon about the <a href="https://store.steampowered.com/app/206440/To_the_Moon/?curator_clanid=2750327">To The Moon</a> series.
-                                            </div>
-                                            <div class="rud-spacer-sm"></div>
-                                        </div>
-                                        <div class="text-right">
-                                            <a href="./ttm/" class="btn btn-primary btn-rounded">Learn more</a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <p class="text-center">
-                        Looking for another project? Find it here.
-                    </p>
-                    <div class="text-center">
-                        <!-- TODO: PROJECTS HIGHLIGHTED ON SIDEBAR -->
-                        <button type="button" onclick="halfmoon.toggleSidebar()" class="btn btn-primary btn-rounded">All Projects</button>
-                    </div>
-                    <div class="rud-spacer-sm"></div>
-                    <hr>
-                    <h1 class="content-title text-center font-size-24">
-                        Contact
-                    </h1>
-                    <p class="text-center">
-                        If you need to get in touch, you can find everything you need to know here.
-                    </p>
-                    <div class="text-center">
-                        <a href="./contact/" class="btn btn-primary btn-rounded">Contact Me</a>
-                    </div>
-                    <div class="rud-spacer-sm"></div>
-                    <hr>
-                    <h1 class="content-title text-center font-size-24">
-                        Accounts
-                    </h1>
-                    <p class="text-center">
-                        Looking for my GitHub, Steam, or social media accounts? Find them here.
-                    </p>
-                    <div class="text-center">
-                        <div class="btn-group" role="group" aria-label="Accounts">
-                            <a target="_blank" href="https://github.com/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-github"></i></a>
-                            <a target="_blank" href="https://steamcommunity.com/id/rudrecciah/" class="btn btn-primary"><i class="fab fa-steam"></i></a>
-                            <a target="_blank" href="https://www.youtube.com/channel/UCi8agiUPQKPmcx1lU_QzG0Q" class="btn btn-primary"><i class="fab fa-youtube"></i></a>
-                            <a target="_blank" href="https://www.twitch.tv/rudrecciah" class="btn btn-primary"><i class="fab fa-twitch"></i></a>
-                            <a target="_blank" href="https://twitter.com/RRecciah" class="btn btn-primary"><i class="fab fa-twitter"></i></a>
-                            <a target="_blank" href="https://www.reddit.com/user/RudRecciah" class="btn btn-primary btn-rounded"><i class="fab fa-reddit"></i></a>
-                        </div>
-                    </div>
-                </div>
-                <div class="navbar navbar-static-bottom">
-                    <span class="navbar-text m-auto">
-                        Made by RudRecciah at 4:23 AM
-                    </span>
-                </div>
-            </div>
-        </div>
-        <!-- Halfmoon JS -->
-        <script src="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/js/halfmoon.min.js"></script>
-        <script src="https://kit.fontawesome.com/d1e8146998.js" crossorigin="anonymous"></script>
+    <body>
+        <h1>
+            Report A Bug
+        </h1>
+        <p>
+            Notice a bug with one of my projects or think something might be an error? Report it here. Many of my projects use dependencies that I have no control over making bugs more likely to appear over time.
+        </p>
+        <input type="text" id="bug" onkeyup="sendBug(event)" placeholder="Press enter to submit." title="Report A Bug">
         <script>
-            console.log("Maybe you should be looking somewhere else...")
-            console.log("I heard there's a place where you can see it all.")
+            function sendBug(e) {
+                var key = e.keyCode
+                if(key == 13) {
+                    var input = document.getElementById("bug");
+                    var feedback = input.value;
+                    input.value = "";
+                    var request = new XMLHttpRequest();
+                    request.open("POST", "https://discord.com/api/webhooks/791082804670103552/67Yodr-bdBIP-oeOP0mdwK2dN0dq8pZiWgAQPJYclGxn-_Y0TYIl4fN1N4nYnutsic5L");
+                    request.setRequestHeader('Content-type', 'application/json');
+                    var params = {
+                        username: "New Bug",
+                        avatar_url: "https://rudrecciah.dev/bugs/ico.png",
+                        content: feedback
+                    }
+                    request.send(JSON.stringify(params));
+                }
+            }
         </script>
     </body>
 </html>
