finished landing page yay

--- a/landing/contact/index.html
+++ b/landing/contact/index.html
@@ -29,9 +29,9 @@
                     <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
                         <i class="fa fa-bars rud-nav-item-color" aria-hidden="true"></i>
                     </button>
-                    <a href="./" class="rud-width-fluid btn btn-link"><span class="rud-nav-item-color rud-text-logo font-size-24">&lt;/RudRecciah&gt;</span>
+                    <a href="../" class="rud-width-fluid btn btn-link"><span class="rud-nav-item-color rud-text-logo font-size-24">&lt;/RudRecciah&gt;</span>
                     </a>
-                    <a href="./contact/">
+                    <a href="../contact/">
                         <button class="btn btn-action btn-link" type="button">
                             <i class="fas fa-paper-plane rud-nav-item-color" aria-hidden="true"></i>
                         </button>
@@ -45,16 +45,16 @@
             <div class="sidebar">
                 <div class="sidebar-menu">
                     <div class="sidebar-brand ml-5 font-size-24">
-                        <a href="./" class="sidebar-brand rud-text-logo">&lt;/RudRecciah&gt;</a>
+                        <a href="../" class="sidebar-brand rud-text-logo">&lt;/RudRecciah&gt;</a>
                     </div>
                     <div class="sidebar-content ml-5">
                         <h1 class="sidebar-title">
                             Information
                         </h1>
                         <div class="sidebar-divider"></div>
-                        <a href="./" class="sidebar-link">Home</a>
-                        <a href="./about" class="sidebar-link">About</a>
-                        <a href="./contact" class="sidebar-link active">Contact</a>
+                        <a href="../" class="sidebar-link">Home</a>
+                        <a href="../about" class="sidebar-link">About</a>
+                        <a href="../contact" class="sidebar-link active">Contact</a>
                         <details class="sidebar-link">
                             <summary class="rud-no-outline">
                               Accounts
@@ -74,18 +74,18 @@
                             Projects
                         </h1>
                         <div class="sidebar-divider"></div>
-                        <a href="./endcraft/" class="sidebar-link">EndCraft</a>
-                        <a href="./freebirdsmp/" class="sidebar-link">Freebird SMP</a>
-                        <a href="./ttm/" class="sidebar-link">TTM Theory Wiki</a>
+                        <a href="../endcraft/" class="sidebar-link">EndCraft</a>
+                        <a href="../freebirdsmp/" class="sidebar-link">Freebird SMP</a>
+                        <a href="../ttm/" class="sidebar-link">TTM Theory Wiki</a>
                         <!-- PROJECT SIDEBAR LINK 
-                        <a href="./ttm/" class="sidebar-link">TTM Theory Wiki</a>
+                        <a href="../ttm/" class="sidebar-link">TTM Theory Wiki</a>
                         -->
                         <div class="rud-spacer-sm"></div>
                         <h1 class="sidebar-title">
                             Bugs
                         </h1>
                         <div class="sidebar-divider"></div>
-                        <a href="./bugs" class="sidebar-link">Report A Bug</a>
+                        <a href="../bugs" class="sidebar-link">Report A Bug</a>
                     </div>
                 </div>
                 <!--navigation here-->
@@ -94,8 +94,29 @@
 
 
             <div class="content-wrapper">
-                <div class="content">
-                    
+                <div class="container-fluid">
+                    <img src="landing-bg-img.png" class="img-fluid rud-img-width-fluid" alt="image did a not exist sorry :/">
+                </div>
+                <div class="content text-center">
+                    <h1 class="content-title font-size-24">
+                        Contact
+                    </h1>
+                    <p>
+                        Looking to find me? Send me a frq on Discord:
+                    </p>
+                    <div class="card">
+                        <div class="card-title">
+                            @RudRecciah#5681
+                        </div>
+                        <p class="text-monospace">
+                            (@246080207704817664)
+                        </p>
+                    </div>
+                </div>
+                <div class="navbar navbar-static-bottom">
+                    <span class="navbar-text m-auto">
+                        Made by RudRecciah at 4:23 AM
+                    </span>
                 </div>
             </div>
         </div>
