--- a/landing/bugs/index.html
+++ b/landing/bugs/index.html
@@ -22,6 +22,11 @@
             Notice a bug with one of my projects or think something might be an error? Report it here. Many of my projects use dependencies that I have no control over making bugs more likely to appear over time.
         </p>
         <input type="text" id="bug" onkeyup="sendBug(event)" placeholder="Press enter to submit." title="Report A Bug">
+        <br>
+        <br>
+        <hr>
+        <br>
+        <a href="../">Back</a>
         <script>
             function sendBug(e) {
                 var key = e.keyCode
@@ -41,5 +46,6 @@
                 }
             }
         </script>
+        <!-- haha brutalist bug page go brr -->
     </body>
 </html>
