oops forgot something i want die now

--- a/landing/index.html
+++ b/landing/index.html
@@ -102,7 +102,7 @@
                         Hey
                     </h1>
                     <p class="text-center">
-                        I'm a <span id="dev-fade-lang" class="font-weight-bolder">%lang%</span> developer who <span id="dev-fade-meta" class="font-weight-bolder">%meta%</span>.
+                        I'm a developer who does things.
                     </p>
                     <div class="text-center">
                         <a href="./about/" class="btn btn-primary btn-rounded">All The Info</a>
@@ -180,7 +180,6 @@
                         Looking for another project? Find it here.
                     </p>
                     <div class="text-center">
-                        <!-- TODO: PROJECTS HIGHLIGHTED ON SIDEBAR -->
                         <button type="button" onclick="halfmoon.toggleSidebar()" class="btn btn-primary btn-rounded">All Projects</button>
                     </div>
                     <div class="rud-spacer-sm"></div>
