--- a/landing/index.html
+++ b/landing/index.html
@@ -131,7 +131,7 @@
                                             <div class="rud-spacer-sm"></div>
                                         </div>
                                         <div class="text-right">
-                                            <a href="./freebirdsmp/" class="btn btn-primary btn-rounded">Learn more</a>
+                                            <a href="./endcraft/" class="btn btn-primary btn-rounded">Learn more</a>
                                         </div>
                                     </div>
                                 </div>
@@ -150,7 +150,7 @@
                                             <div class="rud-spacer-sm"></div>
                                         </div>
                                         <div class="text-right">
-                                            <a href="https://endcraft.org/" class="btn btn-primary btn-rounded">Learn more</a>
+                                            <a href="./freebirdsmp/" class="btn btn-primary btn-rounded">Learn more</a>
                                         </div>
                                     </div>
                                 </div>
@@ -169,7 +169,7 @@
                                             <div class="rud-spacer-sm"></div>
                                         </div>
                                         <div class="text-right">
-                                            <a href="./endcraft/" class="btn btn-primary btn-rounded">Learn more</a>
+                                            <a href="./ttm/" class="btn btn-primary btn-rounded">Learn more</a>
                                         </div>
                                     </div>
                                 </div>
