--- a/freebirdsmp/index.html
+++ b/freebirdsmp/index.html
@@ -9,7 +9,7 @@
         <meta name="description" content="Minecraft and things." />
         <meta name="author" content="RudRecciah" />
         <!-- Favicon and title -->
-        <link rel="icon" href="./favi.png">
+        <link rel="icon" href="./ico.png">
         <title>Freebird SMP</title>
         <!-- CSS -->
         <link href="https://cdn.jsdelivr.net/npm/halfmoon@1.1.1/css/halfmoon-variables.min.css" rel="stylesheet" />
@@ -25,11 +25,14 @@
                 <div class="content">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-lg-8 col-md-12">
-                                <img src="logo.png" class="img-fluid text-center" alt="shits fucked pls reload">
+                            <div class="col text-center">
+                                <img src="fl.png" class="img-fluid h-500" alt="shits fucked pls reload">
                             </div>
-                            <div class="col-lg-4 col-md-12">
-                                <div class="card h-full bg-white text-primary">
+                        </div>
+                        <div class="aespacer"></div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="card bg-white text-primary">
                                     <h1 class="card-title text-center">
                                         FreebirdSMP
                                     </h1>
@@ -40,7 +43,6 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="aespacer"></div>
                         <div class="row">
                             <div class="col-lg-6 col-md-12">
                                 <div class="card bg-white text-primary">
@@ -82,6 +84,13 @@
                                     <p class="text-center">
                                         Some stats.
                                     </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col">
+                                <div class="card bg-white text-white text-center">
+                                    <a href="../" class="btn btn-primary">Home</a>
                                 </div>
                             </div>
                         </div>
