--- a/endcraft/index.html
+++ b/endcraft/index.html
@@ -24,9 +24,11 @@
             <nav class="navbar">
                 <div class="navbar-content">
                     <button class="btn btn-action btn-link" type="button" onclick="halfmoon.toggleSidebar()">
-                        <i class="fa fa-bars rud-nav-item-color" aria-hidden="true">
-                        </i>
+                        <i class="fa fa-bars rud-nav-item-color" aria-hidden="true"></i>
                     </button>
+                    <a href="./" class="navbar-brand">
+                    
+                    </a>
                 </div>
             </nav>
             <div class="sidebar-overlay" onclick="halfmoon.toggleSidebar()"></div>
